--- a/tcc-code/style.css
+++ b/tcc-code/style.css
@@ -38,6 +38,20 @@ body {
     color: #e5e5e9;
 }
 
+.btn-secondary {
+    background-color: #73c0b0;
+    border-color: #73c0b0;
+    color: #316064;
+}
+
+.btn-secondary:hover {
+    background-color: #316064;
+    border-color: #316064;
+    color: #e5e5e9;
+    text-decoration: none;
+}
+
+
 .btn-primary:hover {
     background-color: #73c0b0;
     border-color: #73c0b0;
@@ -107,4 +121,82 @@ a:hover{
 .iconePessoa {
   font-size: 40px;
   margin: 20px;
+}
+
+.formulario{
+    background-color: #F5F5F5;
+    opacity: 0.9;
+    height: auto;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.selecao{    
+    height: 35px;
+    width: 100%;
+    border-radius: 5px;    
+    border: 1px solid #d3d3d3;
+}
+
+.imgTamanho{
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.tiutloCadastro{
+    font-size: 50px;
+    margin-top: 50px;
+}
+
+.subtitulo{
+    font-size: 25px;
+}
+
+.destaque{
+    background-color: #b8d7d5;
+    padding: 0px 5px;
+    border-radius: 5px;
+    color: #316064
+}
+
+.secaoFraseDestaque{
+    background-color: #316064;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    border-radius: 30px;
+    margin-top: 50px;
+
+}
+
+.fraseDestaque{
+    font-size: 25px;
+    font-weight: bold;
+    color: #b8d7d5;
+    text-align: center;
+    margin: 0 150px 0 150px;
+    max-width: 900px;        /* limita largura do texto */
+    padding: 0 20px;
+}
+
+.imgProjeto{
+    height: auto;
+    width: 50%;
+    margin: 60px 60px 30px 60px;
+}
+
+.tituloBeneficio{
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    color: #316064;
+}
+
+.beneficio{
+    text-align: center;
+    font-size: 16px;
+    color: #666;
+    margin-top: 5px;
 }
