Configurando pagina de Login e modificações na pagina de descrição de Projetos

--- a/tcc-code/style.css
+++ b/tcc-code/style.css
@@ -309,3 +309,28 @@ a:hover{
   text-align: right;
   margin: 0;
 }
+
+.tituloDescricao{
+    text-align: center;
+    font-size: 50px;
+}
+.subDescricao{
+    text-align: center;
+    font-size: 30px;
+}
+
+.imagemDescricao{
+    height: 80%;    
+    border-radius: 15px;
+    margin: auto;
+    display: block;
+}
+
+.listaDescricao{
+    margin-top: -120px;
+    list-style: none;
+}
+
+.botaoDescricao{
+    margin-top: 20px;
+}
